--- a/The-Cases.html
+++ b/The-Cases.html
@@ -137,7 +137,7 @@
       </section>
       <section class="case-list">
         <div class="case-card feature-card">
-          <div class="case-title"><span class="icon">📁</span>Case #1 – 50 lần bị từ chối mã nguồn (2024)</div>
+          <div class="case-title"><span class="icon">📁</span>Case #1 – 50 lần bị từ chối mã nguồn (03/12/2024)</div>
           <div class="case-desc">Mô tả: Trước khi phát triển Hyggshi OS, tác giả đã nhiều lần xin mã nguồn từ các game hệ điều hành Roblox khác để học hỏi và tùy chỉnh.</div>
           <div class="case-section"><strong>Kết quả:</strong>
             <ul>
@@ -148,7 +148,7 @@
           <div class="case-impact">Ảnh hưởng: Gây động lực cho tư tưởng mở và dẫn đến sự ra đời của Hyggshi OS 1.0.</div>
         </div>
         <div class="case-card feature-card">
-          <div class="case-title"><span class="icon">📁</span>Case #2 – Zashi Messaging bị chỉ trích vì thiếu kiểm duyệt (2025)</div>
+          <div class="case-title"><span class="icon">📁</span>Case #2 – Zashi Messaging bị chỉ trích vì thiếu kiểm duyệt (05/02/2025)</div>
           <div class="case-desc">Mô tả: Ứng dụng nhắn tin trong Hyggshi OS (Zashi Messaging) cho phép người dùng gửi tin nhắn không bị kiểm duyệt như Roblox Chat mặc định.</div>
           <div class="case-section"><strong>Vấn đề:</strong>
             <ul>
@@ -160,7 +160,7 @@
           <div class="case-result">Kết quả: Tạm thời bị hạn chế sử dụng trong một số bản build Developer.</div>
         </div>
         <div class="case-card feature-card">
-          <div class="case-title"><span class="icon">📁</span>Case #3 – Intel yêu cầu gỡ âm thanh khởi động (2025)</div>
+          <div class="case-title"><span class="icon">📁</span>Case #3 – Intel yêu cầu gỡ âm thanh khởi động (16/03/2025)</div>
           <div class="case-desc">Mô tả: Âm thanh khởi động của Hyggshi OS 2.0 và Developer bị nghi là quá giống một sản phẩm âm thanh thương mại.</div>
           <div class="case-section"><strong>Phản hồi từ Intel:</strong>
             <blockquote style="margin: 0.5rem 0; opacity:0.8; border-left: 3px solid #ffd166; padding-left: 1rem;">"Chúng tôi nhận được một bản thực hành của Hyggshi OS Developer và 2.0.<br>Chúng tôi cần bạn đổi âm thanh này để không quảng bá cho hệ điều hành này?"</blockquote>
@@ -173,7 +173,7 @@
           </div>
         </div>
         <div class="case-card feature-card">
-          <div class="case-title"><span class="icon">📁</span>Case #4 – Tranh cãi phát hành mã nguồn mở 3.0 (2025)</div>
+          <div class="case-title"><span class="icon">📁</span>Case #4 – Tranh cãi phát hành mã nguồn mở 3.0 (21/05/2025)</div>
           <div class="case-desc">Mô tả: Phiên bản Hyggshi OS 3.0 dự định phát hành mã nguồn mở đầy đủ.</div>
           <div class="case-section"><strong>Tranh cãi từ cộng đồng:</strong>
             <ul>
@@ -189,7 +189,7 @@
           </div>
         </div>
         <div class="case-card feature-card">
-          <div class="case-title"><span class="icon">📁</span>Case #5 – Hủy các dự án phụ do thiếu nhân lực (2025)</div>
+          <div class="case-title"><span class="icon">📁</span>Case #5 – Hủy các dự án phụ do thiếu nhân lực (25/05/2025)</div>
           <div class="case-desc">Dự án bị huỷ:
             <ul>
               <li>Hyggshi OS TV</li>
@@ -207,6 +207,22 @@
             <ul>
               <li>Một số người dùng mong đợi các dự án phụ tỏ ra thất vọng.</li>
               <li>Dẫn đến quyết định tích hợp các tính năng tốt nhất của các dự án bị hủy vào Hyggshi OS 3.0.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="case-card feature-card">
+          <div class="case-title"><span class="icon">📁</span>Case #6 – Hyggshi OS Flex: Nguy cơ nhầm lẫn tên (08/08/2025)</div>
+          <div class="case-desc">Mô tả: Trong quá trình giới thiệu dự án mới Hyggshi OS Flex, nhóm nhận thấy có nguy cơ người dùng đọc nhầm “Flex” thành “FIex” do sự tương đồng hình dạng giữa chữ “l” thường và chữ “I” in hoa trong một số font chữ.</div>
+          <div class="case-section"><strong>Ảnh hưởng:</strong>
+            <ul>
+              <li>Gây hiểu nhầm tên dự án, ảnh hưởng đến khả năng nhận diện thương hiệu.</li>
+            </ul>
+          </div>
+          <div class="case-section"><strong>Giải pháp:</strong>
+            <ul>
+              <li>Cập nhật font chữ rõ ràng hơn trong các tài liệu, tránh font dễ gây nhầm lẫn.</li>
+              <li>Khi viết tài liệu và logo, làm nổi bật “l” bằng thiết kế riêng hoặc đổi sang font sans-serif có độ phân biệt cao.</li>
+              <li>Thêm mô tả giải thích tên khi giới thiệu dự án lần đầu.</li>
             </ul>
           </div>
         </div>
