--- a/The-Cases.html
+++ b/The-Cases.html
@@ -3,17 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>The Cases – Các vụ việc đáng chú ý trong lịch sử Hyggshi OS</title>
   <link rel="stylesheet" href="style.css">
   <style>
-    body {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      min-height: 100vh;
-    }
-    .container {
-      margin-top: 60px;
-      margin-bottom: 40px;
-    }
+    
     .cases-hero {
       text-align: center;
       padding: 3.5rem 0 2rem 0;
@@ -132,7 +126,7 @@
   <a href="index.html" class="back-button">← Quay lại</a>
   <div class="container">
     <main>
-      <section class="cases-hero fade-in">
+      <section class="cases-hero">
         <h1><span class="icon">⚖️</span> The Cases – Các vụ việc đáng chú ý trong lịch sử Hyggshi OS</h1>
       </section>
       <section class="case-list">
