--- a/About.html
+++ b/About.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="Resources/favicon.ico" />
+
     <style>
         .about-hero {
             text-align: center;
@@ -222,9 +224,30 @@
     </style>
 </head>
 <body>
-    <a href="index.html" class="back-button">← Quay lại</a>
-    
     <div class="container">
+      <header class="header">
+        <nav class="nav">
+          <div class="logo">
+            <img src="Resources/upscalemedia-transformed.png" alt="Hyggshi OS Logo" style="height: 40px; width: 40px; object-fit: contain; vertical-align: middle; margin-right: 0.5rem; border-radius: 10px; background: rgba(255,255,255,0.2);">
+            <span class="logo-text">Hyggshi OS</span>
+          </div>
+          <ul class="nav-menu">
+            <li><a href="index.html" class="nav-link">Home</a></li>
+            <li><a href="About.html" class="nav-link active">About</a></li>
+            <li><a href="projects.html" class="nav-link">Projects</a></li>
+            <li><a href="History.html" class="nav-link">History</a></li>
+            <li><a href="The-Cases.html" class="nav-link">The Cases</a></li>
+            <li><a href="download.html" class="nav-link">Download</a></li>
+            <li>
+              <a href="https://discord.gg/PZuDkFzJtc" class="nav-link" target="_blank" title="Join Discord" style="display:flex;align-items:center;gap:0.3rem;">
+                <svg height="22" viewBox="0 0 32 32" width="22" fill="currentColor" xmlns="http://www.w3.org/2000/svg" style="vertical-align:middle"><path d="M27.2 6.8A26.9 26.9 0 0 0 20.9 5a1 1 0 0 0-.5.1c-.2.1-.3.3-.3.5-.2.7-.4 1.5-.5 2.2-2.7-.4-5.4-.4-8.1 0-.1-.7-.3-1.5-.5-2.2a.7.7 0 0 0-.3-.5c-.2-.1-.4-.2-.5-.1A26.9 26.9 0 0 0 4.8 6.8a.7.7 0 0 0-.3.3C1.7 11.2.3 15.5.6 19.8a.7.7 0 0 0 .2.4c3.2 2.4 6.3 3.8 9.4 4.7a1 1 0 0 0 1.1-.4c.3-.4.6-.9.8-1.3-3.1-.9-6-2.2-8.7-4.1a.2.2 0 0 1-.1-.2c0-.1 0-.2.1-.2.2-.2.4-.3.6-.2 7.7 5.6 18.1 5.6 25.7 0 .2-.1.4 0 .6.2 0 .1 0 .2-.1.2-2.7 1.9-5.6 3.2-8.7 4.1.3.5.6.9.8 1.3a1 1 0 0 0 1.1.4c3.1-.9 6.2-2.3 9.4-4.7a.7.7 0 0 0 .2-.4c.4-4.3-1-8.6-3.9-12.7a.7.7 0 0 0-.3-.3zM11.7 18.6c-1.1 0-2-1-2-2.1 0-1.2.9-2.1 2-2.1s2 1 2 2.1c0 1.2-.9 2.1-2 2.1zm8.6 0c-1.1 0-2-1-2-2.1 0-1.2.9-2.1 2-2.1s2 1 2 2.1c0 1.2-.9 2.1-2 2.1z"/></svg>
+                <span style="display:none;">Discord</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+
         <div class="about-hero">
             <h1>🪟 Giới thiệu về Hyggshi OS</h1>
             <p class="subtitle">Hệ điều hành mô phỏng mã nguồn mở trên Roblox</p>
