--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
           <li><a href="History.html" class="nav-link">History</a></li>
           <li><a href="The-Cases.html" class="nav-link">The Cases</a></li>
           <li><a href="download.html" class="nav-link">Download</a></li>
+          <li><a href="license.html" class="nav-link">License</a></li>
           
           <li>
             <a href="https://discord.gg/PZuDkFzJtc" class="nav-link" target="_blank" title="Join Discord" style="display: flex; align-items: center; gap: 0.3rem;">
