--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@
           <li><a href="The-Cases.html" class="nav-link">The Cases</a></li>
           <li><a href="download.html" class="nav-link">Download</a></li>
           <li><a href="license.html" class="nav-link">License</a></li>
+          <li><a href="erorrcode.html" class="nav-link">erorr code</a></li>
+
           
           <li>
             <a href="https://discord.gg/PZuDkFzJtc" class="nav-link" target="_blank" title="Join Discord" style="display: flex; align-items: center; gap: 0.3rem;">
