--- a/download.html
+++ b/download.html
@@ -24,6 +24,7 @@
           <li><a href="download.html" class="nav-link">Download</a></li>
           <li><a href="license.html" class="nav-link">License</a></li>
           <li><a href="erorrcode.html" class="nav-link">erorr code</a></li>
+          <li><a href="OSmain.html" class="nav-link">OS Test</a></li>
           
           <li>
             <a href="https://discord.gg/PZuDkFzJtc" class="nav-link" target="_blank" title="Join Discord" style="display:flex;align-items:center;gap:0.3rem;">
