--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -192,6 +192,7 @@
           <li><a href="download.html" class="nav-link">Download</a></li>
           <li><a href="license.html" class="nav-link">License</a></li>
           <li><a href="erorrcode.html" class="nav-link">erorr code</a></li>
+          <li><a href="OSmain.html" class="nav-link">OS Test</a></li>
 
           
           <li>
