--- a/erorrcode.html
+++ b/erorrcode.html
@@ -38,6 +38,7 @@
           <li><a href="download.html" class="nav-link">Download</a></li>
           <li><a href="license.html" class="nav-link">License</a></li>
           <li><a href="erorrcode.html" class="nav-link active">Error Codes</a></li>
+          <li><a href="OSmain.html" class="nav-link">OS Test</a></li>
         </ul>
       </nav>
     </header>
