--- a/download.html
+++ b/download.html
@@ -21,10 +21,10 @@
           <li><a href="projects.html" class="nav-link">Projects</a></li>
           <li><a href="History.html" class="nav-link">History</a></li>
           <li><a href="The-Cases.html" class="nav-link">The Cases</a></li>
-          <li><a href="download.html" class="nav-link">Download</a></li>
+          <li><a href="download.html" class="nav-link active">Download</a></li>
           <li><a href="license.html" class="nav-link">License</a></li>
           <li><a href="erorrcode.html" class="nav-link">Error Codes</a></li>
-          <li><a href="timeline.html" class="nav-link active">Timeline</a></li>
+          <li><a href="timeline.html" class="nav-link">Timeline</a></li>
           <li><a href="OSmain.html" class="nav-link">OS Test</a></li>
           
           <li>
