--- a/History.html
+++ b/History.html
@@ -183,12 +183,12 @@
             <li><a href="index.html" class="nav-link">Home</a></li>
             <li><a href="About.html" class="nav-link">About</a></li>
             <li><a href="projects.html" class="nav-link">Projects</a></li>
-            <li><a href="History.html" class="nav-link">History</a></li>
+            <li><a href="History.html" class="nav-link active">History</a></li>
             <li><a href="The-Cases.html" class="nav-link">The Cases</a></li>
             <li><a href="download.html" class="nav-link">Download</a></li>
             <li><a href="license.html" class="nav-link">License</a></li>
             <li><a href="erorrcode.html" class="nav-link">Error Codes</a></li>
-            <li><a href="timeline.html" class="nav-link active">Timeline</a></li>
+            <li><a href="timeline.html" class="nav-link">Timeline</a></li>
             <li><a href="OSmain.html" class="nav-link">OS Test</a></li>
             <li>
               <a href="https://discord.gg/PZuDkFzJtc" class="nav-link" target="_blank" title="Join Discord" style="display:flex;align-items:center;gap:0.3rem;">
