--- a/erorrcode.html
+++ b/erorrcode.html
@@ -37,8 +37,8 @@
           <li><a href="The-Cases.html" class="nav-link">The Cases</a></li>
           <li><a href="download.html" class="nav-link">Download</a></li>
           <li><a href="license.html" class="nav-link">License</a></li>
-          <li><a href="erorrcode.html" class="nav-link">Error Codes</a></li>
-          <li><a href="timeline.html" class="nav-link active">Timeline</a></li>
+          <li><a href="erorrcode.html" class="nav-link active">Error Codes</a></li>
+          <li><a href="timeline.html" class="nav-link">Timeline</a></li>
           <li><a href="OSmain.html" class="nav-link">OS Test</a></li>
 
         </ul>
