--- a/license.html
+++ b/license.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,9 +22,9 @@
           <li><a href="History.html" class="nav-link">History</a></li>
           <li><a href="The-Cases.html" class="nav-link">The Cases</a></li>
           <li><a href="download.html" class="nav-link">Download</a></li>
-          <li><a href="license.html" class="nav-link">License</a></li>
+          <li><a href="license.html" class="nav-link active">License</a></li>
           <li><a href="erorrcode.html" class="nav-link">Error Codes</a></li>
-          <li><a href="timeline.html" class="nav-link active">Timeline</a></li>
+          <li><a href="timeline.html" class="nav-link">Timeline</a></li>
           <li><a href="OSmain.html" class="nav-link">OS Test</a></li>
 
           <li>
