--- a/index.html
+++ b/index.html
@@ -21,19 +21,40 @@
   <meta name="twitter:image" content="https://hyggshiosdeveloper.github.io/hyggshi-os-website/og-image.png" />
 
   <!-- JSON-LD Schema -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "WebSite",
-    "name": "Hyggshi OS Project Center",
-    "url": "https://hyggshiosdeveloper.github.io/hyggshi-os-website/",
-    "description": "Nền tảng phát triển hệ điều hành Roblox hiện đại.",
-    "creator": {
-      "@type": "Person",
-      "name": "Nguyễn Minh Phúc"
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Hyggshi OS Project Center",
+  "alternateName": "Hyggshi OS Developer Hub",
+  "url": "https://hyggshiosdeveloper.github.io/hyggshi-os-website/",
+  "description": "Nền tảng phát triển hệ điều hành Roblox hiện đại, dành cho lập trình viên và cộng đồng sáng tạo Hyggshi OS.",
+  "inLanguage": "vi",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Hyggshi OS Team",
+    "url": "https://hyggshiosdeveloper.github.io/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://hyggshiosdeveloper.github.io/hyggshi-os-website/Resources/favicon.ico"
     }
+  },
+  "creator": {
+    "@type": "Person",
+    "name": "Nguyễn Minh Phúc",
+    "url": "https://hyggshiosdeveloper.github.io/hyggshi-os-website/"
+  },
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://hyggshiosdeveloper.github.io/hyggshi-os-website/?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  },
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://hyggshiosdeveloper.github.io/hyggshi-os-website/"
   }
-  </script>
+}
+</script>
 
   <link rel="icon" href="Resources/favicon.ico" />
     <link rel="stylesheet" href="style.css">
@@ -457,4 +478,5 @@
     })();
   </script>
 </body>
+
 </html> 
