--- a/index.html
+++ b/index.html
@@ -24,34 +24,42 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "WebSite",
-  "name": "Hyggshi OS Project Center",
-  "alternateName": "Hyggshi OS Developer Hub",
+  "@type": "Product",
+  "name": "Hyggshi OS",
+  "alternateName": "Hyggshi Operating System",
+  "image": "https://hyggshiosdeveloper.github.io/hyggshi-os-website/Resources/hyggshi-logo.png",
   "url": "https://hyggshiosdeveloper.github.io/hyggshi-os-website/",
-  "description": "Nền tảng phát triển hệ điều hành Roblox hiện đại, dành cho lập trình viên và cộng đồng sáng tạo Hyggshi OS.",
-  "inLanguage": "vi",
-  "publisher": {
-    "@type": "Organization",
-    "name": "Hyggshi OS Team",
-    "url": "https://hyggshiosdeveloper.github.io/",
-    "logo": {
-      "@type": "ImageObject",
-      "url": "https://hyggshiosdeveloper.github.io/hyggshi-os-website/Resources/favicon.ico"
-    }
+  "description": "Hyggshi OS là hệ điều hành mô phỏng hiện đại lấy cảm hứng từ Windows, được thiết kế trong Roblox để tạo trải nghiệm lập trình và tương tác sáng tạo.",
+  "sku": "HOS-001",
+  "brand": {
+    "@type": "Brand",
+    "name": "Hyggshi OS Project Center"
   },
   "creator": {
     "@type": "Person",
-    "name": "Nguyễn Minh Phúc",
+    "name": "Nguyễn Minh Phúc"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "Hyggshi OS Team",
+    "url": "https://hyggshiosdeveloper.github.io/"
+  },
+  "inLanguage": "vi",
+  "releaseDate": "2025-01-01",
+  "softwareVersion": "2.1.7",
+  "operatingSystem": "Roblox Engine",
+  "applicationCategory": "EducationalApplication",
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "VND",
+    "availability": "https://schema.org/InStock",
     "url": "https://hyggshiosdeveloper.github.io/hyggshi-os-website/"
   },
-  "potentialAction": {
-    "@type": "SearchAction",
-    "target": "https://hyggshiosdeveloper.github.io/hyggshi-os-website/?q={search_term_string}",
-    "query-input": "required name=search_term_string"
-  },
-  "mainEntityOfPage": {
-    "@type": "WebPage",
-    "@id": "https://hyggshiosdeveloper.github.io/hyggshi-os-website/"
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "ratingCount": "32"
   }
 }
 </script>
@@ -480,3 +488,4 @@
 </body>
 
 </html> 
+
